[build-system]
requires = ["setuptools>=45.2", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.coverage.run]
source = ["pytest_fluent"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.pytest.ini_options]
addopts = "-p no:fluent-logging -p pytester"
log_level = "INFO"