[metadata]
name = pytest-fluent
description = A pytest plugin in order to provide logs via fluentd
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pytest, logging, fluent

author = Rohde & Schwarz GmbH & Co. KG
author_email = info@rohde-schwarz.com
maintainer = Carsten Sauerbrey
maintainer_email = carsten.sauerbrey@rohde-schwarz.com

url = https://github.com/Rohde-Schwarz/pytest-fluent

copyright= Copyright © Rohde & Schwarz GmbH & Co. KG 2022
license = MIT

platform = 
    Unix
    Linux
    Windows

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Pytest

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.8
install_requires = 
    pytest
    msgpack
    six
    fluent-logger
use_scm_version = True
setup_requires =
    setuptools_scm

[options.entry_points]
pytest11 = 
    fluent-logging = pytest_fluent.plugin

[options.packages.find]
where = src

[mypy]
ignore_missing_imports = True

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    myst-parser
test =
    pytest
    coverage[toml]
    pytest-cov
    pytest-xdist[psutil]
    six