[metadata]
copyright = Copyright © Rohde & Schwarz GmbH & Co. KG 2022
platform =
    Unix
    Linux
    Windows

[options]
package_dir=
    =src
packages=find:
include_package_data = True

[options.entry_points]
pytest11 =
    fluent-logging = pytest_fluent.plugin

[options.packages.find]
where = src

[options.package_data]
pytest_fluent.data =
    *.json